<resources>
    <string name="app_name">TODO List</string>
    <string name="description">Description</string>
    <string name="task_title">Task Title</string>
    <string name="no_tasks_available">No Tasks Available</string>
    <string name="tasks_list">Tasks List</string>
    <string name="add_task">Add Task</string>
    <string name="image">image</string>
    <string name="update_task">Update Task</string>
    <string name="task">Task</string>
    <string name="edit_new_task">Edit New Task</string>
    <string name="update">UPDATE</string>
    <string name="cancel">CANCEL</string>
    <string name="new_description">New Description</string>
    <string name="added_successfully">Task Added Successfully</string>
    <string name="updated_successfully">Task Updated Successfully</string>
    <string name="deleted_successfully">Task Deleted Successfully</string>
    <string name="empty_field_err_msg">Empty fields can\'t be updated</string>
    <string name="delete_task">Delete Task</string>
    <string name="delete_specific">Are you sure you wants to delete %1$d</string>
    <string name="colon">:</string>
</resources>